--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    namespace = 'com.aliyun.sls.dart'
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.aliyun.sls.dart'
+    }
     compileSdkVersion 31
 
     compileOptions {
